FIx resolve overflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,17 +12,7 @@
 
 body {
   overflow-x: hidden;
-  width: 100%;
-  height: 100%;
   overscroll-behavior-x: none;
-  -webkit-overflow-scrolling: touch;
-}
-
-@media (min-width: 768px) {
-  body {
-    position: relative;
-    height: auto;
-  }
 }
 
 @layer base {
